<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/containerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"

            app:layout_behavior="com.bignerdranch.android.typesetter.FloatingActionButtonAwareBehaviour">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FAFAFA"
                tools:context="com.bignerdranch.android.typesetter.TypesetterActivity">

                <Spinner
                    android:id="@+id/font_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>


                <Button
                    android:id="@+id/renderButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/render"
                    app:layout_constraintLeft_toLeftOf="@+id/font_spinner"
                    app:layout_constraintTop_toBottomOf="@+id/font_size_TextInputLayout"/>

                <TextView
                    android:id="@+id/fillerTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="12dp"
                    android:background="#FFFFFF"
                    android:paddingBottom="24dp"
                    android:paddingEnd="24dp"
                    android:paddingStart="24dp"
                    android:paddingTop="12dp"
                    android:text="@string/filler_text"
                    android:textColor="#000000"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/renderButton"
                    app:layout_constraintVertical_bias="0.0"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/letter_spacing_text_input_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="0dp"
                    app:hintTextAppearance="@style/HintStyle"
                    app:layout_constraintLeft_toRightOf="@+id/line_spacing_text_input_layout"
                    app:layout_constraintRight_toRightOf="@+id/font_spinner"
                    app:layout_constraintTop_toTopOf="@+id/line_spacing_text_input_layout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/letter_spacing_editText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/letter_spacing"
                        android:inputType="numberSigned|numberDecimal"
                        android:textColor="#008ECC" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/font_size_TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="24dp"
                    app:hintTextAppearance="@style/HintStyle"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintLeft_toLeftOf="@+id/font_spinner"
                    app:layout_constraintRight_toLeftOf="@+id/line_spacing_text_input_layout"
                    app:layout_constraintTop_toBottomOf="@+id/font_spinner"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/font_size_editText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/font_size"
                        android:inputType="numberDecimal"
                        android:digits="0123456789."
                        android:textColor="#008ECC"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/line_spacing_text_input_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="0dp"
                    app:hintTextAppearance="@style/HintStyle"
                    app:layout_constraintLeft_toRightOf="@+id/font_size_TextInputLayout"
                    app:layout_constraintRight_toLeftOf="@+id/letter_spacing_text_input_layout"
                    app:layout_constraintTop_toTopOf="@+id/font_size_TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/line_spacing_editText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/line_spacing_extra"
                        android:inputType="numberSigned|numberDecimal"
                        android:textColor="#008ECC"/>

                </android.support.design.widget.TextInputLayout>

            </android.support.constraint.ConstraintLayout>
        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_share"
            android:tint="#FFFFFF"
            android:tintMode="src_in"/>

    </android.support.design.widget.CoordinatorLayout>
</layout>